Fix: Card stretching issues

--- a/sass/css/components/_feature.scss
+++ b/sass/css/components/_feature.scss
@@ -1,6 +1,10 @@
 .features {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .features > div {
@@ -8,7 +12,7 @@
   border-radius: 0.75rem;
   padding: 1.5rem 1.25rem 2.5rem 1.25rem;
   text-align: left;
-  width: auto;
+  width: 100%;
 }
 
 .features > :first-child {
@@ -44,10 +48,12 @@
   margin-top: 1rem;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 1000px) {
   .features {
     flex-direction: row;
     justify-content: center;
+    align-items: stretch;
+    max-width: none;
   }
 
   .features > :first-child {
